css/main.css
#palm-wrapper {
  background-image: linear-gradient(to bottom, #f6f6f6, #ff9200, #ff9200, #f3e999, rgb(0, 195, 255), #0010ff);;
  display: flex;
  align-items: center;
  flex-direction: column;
  padding-bottom: 100px;
}

body.dark {
  filter: invert(100%) hue-rotate(180deg);
}

body.dark img, body.dark #palm-wrapper {  
  filter: invert(100%) hue-rotate(180deg);
}

body.dark #palm-wrapper {
  background-image: linear-gradient(to bottom, #000, #ff9200, #ff9200, #f3e999, rgb(0, 195, 255), #0010ff)
}

.caption {
  margin: 0;
}

svg#logo {
  fill: white;
  max-width: 750px;
}

svg#logo path#innerText {
  stroke: #65bf3b;
  stroke-width: 3;
  stroke-dasharray: 190737;
  animation: drawInner 4s 1 ease-in-out;
}

svg#logo path#outerText {
  stroke: #000;
  stroke-width: 3;
  stroke-dasharray: 190737;
  animation: drawOuter 4s 1 ease-in-out;
}

@keyframes drawOuter {
  0% {
    stroke-dashoffset: 190737;
    fill-opacity: 0;
  }

  10% {
    fill-opacity: 0;
  }

  40% {
    stroke-dashoffset: 0;
  }

  50% {
    fill-opacity: 1;
    stroke-dashoffset: 0;
  }
}

@keyframes drawInner {
  0% {
    stroke-dashoffset: 190737;
    fill-opacity: 0;
  }

  30% {
    stroke-dashoffset: 190737;
    fill-opacity: 0;
  }

  50% {
    fill-opacity: 0;
  }

  85% {
    stroke-dashoffset: 0;
  }

  100% {
    fill-opacity: 1;
    stroke-dashoffset: 0;
  }
}

.logo {
  max-width: 400px;
  position: relative;
  border: 0 solid;
  display: inline;
}

#palm-wrapper svg {
  max-width: 500px;
  margin: auto;
  display: flex;
}

div.row {
  align-items: center;
  justify-content: left;
}

#palm-wrapper span {
  text-align: center;
  width: 100%;
  color: white;
}

#palm-wrapper span a {
  background-image: initial;
  color: white;
}

.background-secondary {
  background-color: #a3d1ff;
}

nav {
  background-color: #dfdfdf;
}

.paper {
  background-color: #f6f6f6;
  border: 0px solid;
}

#photos {
    /* Prevent vertical gaps */
    line-height: 0;
     
    -webkit-column-count: 5;
    -webkit-column-gap:   0px;
    -moz-column-count:    5;
    -moz-column-gap:      0px;
    column-count:         5;
    column-gap:           0px;  
  }
  
  .photos img {
    /* Just in case there are inline attributes */
    width: 100% !important;
    height: auto !important;
  }


  .photos {
    -moz-column-count:    4;
    -webkit-column-count: 4;
    column-count:         4;
  }
  
  @media (max-width: 1000px) {
    .photos {
      -moz-column-count:    3;
      -webkit-column-count: 3;
      column-count:         3;
    }
  }
  @media (max-width: 800px) {
    .photos {
      -moz-column-count:    2;
      -webkit-column-count: 2;
      column-count:         2;
    }
  }
  @media (max-width: 400px) {
    .photos {
      -moz-column-count:    1;
      -webkit-column-count: 1;
      column-count:         1;
    }
  }

#progress {
    visibility: hidden;
}

.progress .bar {
    transition: 1s ease-in-out;
}

span.note {
    display: none;
}

h2 svg {
  height: 3rem;
  position: relative;
  top: 0.15em;
  width: auto;
}

td svg {
  height: 1.25rem;
  position: relative;
  top: 0.15em;
  width: auto;
}

.full-width {
  width: 100%;
}

.form-group {
  margin: 1rem;
}

.image-container {
  position: relative;
  overflow: hidden;
  margin: 15px 0;
}

.placeholder {
  position: relative;
  width: 100%;
}

.prefix-icon {
  height: 23px;
  margin-right: 5px;
}

.picture {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  transition: opacity 0.5s linear;
}


.picture.loaded {
  opacity: 1;
}

.hidden {
  display: none !important;
}

.hideForGuest {
  display: none !important;
}

.signedIn li.hideForGuest{
  display: inline-block !important;
}

.signedIn .hideForGuest{
  display: flex !important;
}

.signedIn .hideForUser {
  display: none;
}

.hideForNonAdmin {
  display: none !important;
}

.admin .hideForNonAdmin {
  display: initial !important;
}

